2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove reference to screen-exec.
	* gweather-applet.c: (help_cb), (applet_destroy),
	(gweather_applet_create): Use gnome_help_* Also
	s/gtk_signal_connect/g_signal_connect/
	* gweather-pref.c: (help_cb): Same.

2004-08-15  Davyd Madeley  <davyd@madeley.id.au>

	* GNOME_GWeatherApplet.xml:
	* gweather-applet.c:
	* gweather-dialog.c: Change "Forecast" to "Details". Fixes #133871.

	* gweather-dialog.c: Change "Humidity" to "Relative Humidity". Fixes
	#147878.

2004-08-14  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xmlin: Add Ulaanbaatar, remove extra occurance of Penang,
	fix spelling of Sepang, change "Atlantic" to "Atlantic Ocean" to fix
	translation problem.

2004-08-14  Frank Solensky  <frank@solensky.org>

	reviewed by: Davyd Madeley <davyd@madeley.id.au>

	* Locations.xml.in: Add locations for Ukraine and Poland; fix typo on
	Gloucestershire, UK

	Fixes bugs #106451, #142677, #149123

2004-08-09  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c: Change centigrade to celsius. Closes bug #149541.
	* docs/C/gweather.xml: Change centigrade to celsius to reflect update
	in UI. Also add kPa to the list of pressures.

2004-08-08  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c:
	* gweather.h:
	* gweather.c: Add kPa to the list of pressure preferences. Closes
	#149612. Patch by Ryan Lortie <desrt@desrt.ca>.

2004-08-04  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* Locations.xml.in: Corrected Aguascaliantes to Aguascalientes
	correct spelling

2004-07-25  Gareth Owen  <gowen72@yahoo.com>

	* Locations.xml.in: Added Aigen Im Ennstal to Austrian
	locations.

	Fixes bug #148170

	Patch by Patrick Steiner <patrick.steiner@a1.net>

2004-07-25  Gareth Owen  <gowen72@yahoo.com>

	* weather.c: Remove C99isms

	Fixes bug #148050

	Patch by Joe Marcus Clarke <marcus@freebsd.org>

2004-07-25  Gareth Owen  <gowen72@yahoo.com>
