@@ -10023,19 +10023,27 @@
  <country>
   <_name>Greece</_name>
    <location>
-    <_name>Andravida</_name>
-    <code>LGAD</code>
+    <_name>Agrinio</_name>
+    <code>LGAG</code>
    </location>
    <location>
-    <_name>Alexandroupolis</_name>
+    <_name>Alexandroupoli</_name>
     <code>LGAL</code>
+   </location>
+   <location>
+    <_name>Andravida</_name>
+    <code>LGAD</code>
    </location>
    <location>
     <_name>Araxos</_name>
     <code>LGRX</code>
    </location>
    <location>
-    <_name>Athinai</_name>
+    <_name>Astypalaia</_name>
+    <code>LGPL</code>
+   </location>
+   <location>
+    <_name>Athens</_name>
     <code>LGAV</code>
    </location>
    <location>
@@ -10043,11 +10051,27 @@
     <code>LGSA</code>
    </location>
    <location>
-    <_name>Elefsis</_name>
+    <_name>Chios</_name>
+    <code>LGHI</code>
+   </location>
+   <location>
+    <_name>Dekelia</_name>
+    <code>LGTT</code>
+   </location>
+   <location>
+    <_name>Elefsina</_name>
     <code>LGEL</code>
    </location>
    <location>
-    <_name>Iraklion</_name>
+    <_name>Ikaria</_name>
+    <code>LGIK</code>
+   </location>
+   <location>
+    <_name>Ioannina</_name>
+    <code>LGIO</code>
+   </location>
+   <location>
+    <_name>Iraklio</_name>
     <code>LGIR</code>
    </location>
    <location>
@@ -10055,16 +10079,40 @@
     <code>LGKL</code>
    </location>
    <location>
+    <_name>Karpathos</_name>
+    <code>LGKP</code>
+   </location>
+   <location>
+    <_name>Kasos</_name>
+    <code>LGKS</code>
+   </location>
+   <location>
+    <_name>Kasteli</_name>
+    <code>LGTL</code>
+   </location>
+   <location>
+    <_name>Kastelorizo</_name>
+    <code>LGKJ</code>
+   </location>
+   <location>
+    <_name>Kastoria</_name>
+    <code>LGKA</code>
+   </location>
+   <location>
     <_name>Kavala</_name>
     <code>LGKV</code>
    </location>
    <location>
-    <_name>Kefallinia</_name>
+    <_name>Kefallonia</_name>
     <code>LGKF</code>
    </location>
    <location>
     <_name>Kerkira</_name>
     <code>LGKR</code>
+   </location>
+   <location>
+    <_name>Kithira</_name>
+    <code>LGKC</code>
    </location>
    <location>
     <_name>Kos</_name>
@@ -10075,16 +10123,48 @@
     <code>LGKZ</code>
    </location>
    <location>
+    <_name>Larisa</_name>
+    <code>LGLR</code>
+   </location>
+   <location>
+    <_name>Leros</_name>
+    <code>LGLE</code>
+   </location>
+   <location>
     <_name>Limnos</_name>
     <code>LGLM</code>
+   </location>
+   <location>
+    <_name>Megara</_name>
+    <code>LGMG</code>
+   </location>
+   <location>
+    <_name>Mikonos</_name>
+    <code>LGMK</code>
+   </location>
+   <location>
+    <_name>Milos</_name>
+    <code>LGML</code>
    </location>
    <location>
     <_name>Mitilini</_name>
     <code>LGMT</code>
    </location>
    <location>
-    <_name>Mykonos</_name>
-    <code>LGMK</code>
+    <_name>Naxos</_name>
+    <code>LGNX</code>
+   </location>
+   <location>
+    <_name>Nea Anchialos</_name>
+    <code>LGBL</code>
+   </location>
+   <location>
+    <_name>Paros</_name>
+    <code>LGPA</code>
+   </location>
+   <location>
+    <_name>Porto Cheli</_name>
+    <code>LGHL</code>
    </location>
    <location>
     <_name>Preveza</_name>
@@ -10103,12 +10183,36 @@
     <code>LGSR</code>
    </location>
    <location>
+    <_name>Sitia</_name>
+    <code>LGST</code>
+   </location>
+   <location>
     <_name>Skiathos</_name>
     <code>LGSK</code>
    </location>
    <location>
+    <_name>Skiros</_name>
+    <code>LGSY</code>
+   </location>
+   <location>
+    <_name>Sparti</_name>
+    <code>LGSP</code>
+   </location>
+   <location>
+    <_name>Syros</_name>
+    <code>LGSO</code>
+   </location>
+   <location>
+    <_name>Tanagra</_name>
+    <code>LGTG</code>
+   </location>
+   <location>
     <_name>Thessaloniki</_name>
     <code>LGTS</code>
+   </location>
+   <location>
+    <_name>Tripoli</_name>
+    <code>LGTP</code>
    </location>
    <location>
     <_name>Zakinthos</_name>
