@@ -1,3 +1,9 @@
+2004-08-18  Simos Xenitellis  <simos@gnome.org>
+
+	* Locations.xml.in: Added full list for Greece, based on 
+	https://www.notams.jcs.mil/common/icao/R9C1.html. Then normalised
+	airport names to modern Greek.
+
 2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Makefile.am: Remove reference to screen-exec.
